forntend docker changed

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -1,22 +1,19 @@
-# apps/web/Dockerfile
-
 # ---------- Build ----------
 FROM node:20-alpine AS build
 WORKDIR /app
 
-# 1) Install using ROOT lockfile (workspaces)
+# Install dependencies using root lockfile (workspace-aware)
 COPY package.json package-lock.json ./
 COPY apps/web/package.json apps/web/package.json
 RUN npm ci --include=dev
 
-# 2) Bring in the repo
+# Copy the whole repo (so Next.js can resolve workspaces & imports)
 COPY . .
 
-# 3) Make sure public/ exists so COPY never fails later
+# Make sure public exists (avoids COPY errors later)
 RUN mkdir -p apps/web/public
 
-# 4) Build ONLY web
-# (expects "build": "next build" in apps/web/package.json)
+# Build ONLY web workspace
 RUN npm --workspace apps/web run build
 
 
@@ -24,13 +21,14 @@ RUN npm --workspace apps/web run build
 FROM node:20-alpine AS runtime
 WORKDIR /app
 
-# If you use Next "standalone" output, prefer that (see note below).
-# Non-standalone runtime (uses node_modules + .next):
-COPY --from=build /app/node_modules ./node_modules
+# Use smaller image: copy only what's needed
 COPY --from=build /app/apps/web/.next ./.next
 COPY --from=build /app/apps/web/public ./public
 COPY --from=build /app/apps/web/package*.json ./
+COPY --from=build /app/node_modules ./node_modules
 
 ENV NODE_ENV=production
 EXPOSE 3000
-CMD ["node", "node_modules/next/dist/bin/next", "start", "-p", "3000"]
+
+# Start Next.js
+CMD ["npm", "run", "start", "--workspace=apps/web"]
