--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -1,35 +1,38 @@
 # apps/api/Dockerfile
+
+# ---------- Build ----------
 FROM node:20-alpine AS build
 RUN apk add --no-cache libc6-compat openssl
 WORKDIR /app
 
-# Root manifests + API manifest
-COPY package.json package-lock.json ./
-COPY apps/api/package.json apps/api/package.json
+# Copy root manifests + api manifest
+# (context = apps/api, so package.json here is already API ka package.json)
+# 👈 root ke manifests ke liye
+COPY ../../package.json ../../package-lock.json ./ 
+ # 👈 api ka apna manifest  
+COPY package.json ./                                
 
 # Install all workspaces (dev deps included for build)
 RUN npm ci --include=dev
 
 # Copy repo
-COPY . .
+COPY ../../ ./
 
-# Generate client (will be v5.17.0 due to overrides)
+# Generate prisma client
 RUN npx prisma generate --schema apps/api/prisma/schema.prisma
 
-# Build API (script: prisma generate && tsc)
+# Build API
 RUN npm --workspace apps/api run build
 
-# ---- runtime ----
-# ---- runtime ----
+# ---------- Runtime ----------
 FROM node:20-alpine
 RUN apk add --no-cache libc6-compat openssl
-
 WORKDIR /app/apps/api
 
 # Copy API package.json only
 COPY --from=build /app/apps/api/package*.json ./
 
-# Copy node_modules (needed for runtime)
+# Copy node_modules
 COPY --from=build /app/node_modules /app/node_modules
 
 # Copy dist + prisma
@@ -40,5 +43,4 @@ ENV NODE_ENV=production
 ENV PORT=4000
 EXPOSE 4000
 
-CMD ["npm","start"]
-
+CMD ["npm", "start"]
