config.web.json added

--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -1,27 +1,24 @@
-# apps/api/Dockerfile
-
 # ---------- Build ----------
 FROM node:20-alpine AS build
 RUN apk add --no-cache libc6-compat openssl
 WORKDIR /app
 
-# Copy root manifests + api manifest
-# (context = apps/api, so package.json here is already API ka package.json)
-# 👈 root ke manifests ke liye
-COPY ../../package.json ../../package-lock.json ./ 
- # 👈 api ka apna manifest  
-COPY package.json ./                                
+# Copy root manifests
+COPY package.json package-lock.json ./
 
-# Install all workspaces (dev deps included for build)
+# Copy API package.json for workspace resolution
+COPY apps/api/package.json apps/api/package.json
+
+# Install all deps (root + workspaces)
 RUN npm ci --include=dev
 
-# Copy repo
-COPY ../../ ./
+# Copy the whole repo
+COPY . .
 
 # Generate prisma client
 RUN npx prisma generate --schema apps/api/prisma/schema.prisma
 
-# Build API
+# Build API workspace
 RUN npm --workspace apps/api run build
 
 # ---------- Runtime ----------
@@ -29,10 +26,10 @@ FROM node:20-alpine
 RUN apk add --no-cache libc6-compat openssl
 WORKDIR /app/apps/api
 
-# Copy API package.json only
+# Copy API package.json
 COPY --from=build /app/apps/api/package*.json ./
 
-# Copy node_modules
+# Copy deps
 COPY --from=build /app/node_modules /app/node_modules
 
 # Copy dist + prisma
@@ -43,4 +40,4 @@ ENV NODE_ENV=production
 ENV PORT=4000
 EXPOSE 4000
 
-CMD ["npm", "start"]
+CMD ["npm", "run", "start", "--workspace=apps/api"]
