--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -2,26 +2,27 @@
 FROM node:20-alpine AS build
 WORKDIR /app
 
-# Install dependencies using root lockfile (workspace-aware)
+# Copy root + web manifests
 COPY package.json package-lock.json ./
 COPY apps/web/package.json apps/web/package.json
+
+# Install all deps
 RUN npm ci --include=dev
 
-# Copy the whole repo (so Next.js can resolve workspaces & imports)
+# Copy repo
 COPY . .
 
-# Make sure public exists (avoids COPY errors later)
+# Ensure public folder
 RUN mkdir -p apps/web/public
 
-# Build ONLY web workspace
+# Build only web workspace
 RUN npm --workspace apps/web run build
-
 
 # ---------- Runtime ----------
 FROM node:20-alpine AS runtime
-WORKDIR /app
+WORKDIR /app/apps/web
 
-# Use smaller image: copy only what's needed
+# Copy built output
 COPY --from=build /app/apps/web/.next ./.next
 COPY --from=build /app/apps/web/public ./public
 COPY --from=build /app/apps/web/package*.json ./
@@ -30,5 +31,4 @@ COPY --from=build /app/node_modules ./node_modules
 ENV NODE_ENV=production
 EXPOSE 3000
 
-# Start Next.js
 CMD ["npm", "run", "start", "--workspace=apps/web"]
