--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -33,7 +33,7 @@
     "@nx/jest": "^21.4.1",
     "@nx/node": "^21.4.1",
     "@types/bcrypt": "6.0.0",
-    "@types/multer": "1.4.11",
+    "@types/multer": "^1.4.11",
     "@types/node": "20.14.10",
     "@types/passport": "1.0.17",
     "@types/passport-jwt": "4.0.1",
