--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/node": "20.14.10",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
+     "@types/multer": "^1.4.7",
     "concurrently": "8.2.2",
     "eslint": "^8.57.1",
     "jest": "^30.1.2",
