Web parallel deploy

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,10 +35,13 @@ jobs:
     needs: verify
     steps:
       - uses: actions/checkout@v4
+
       - name: Install Railway CLI
         run: npm install -g @railway/cli
+
       - name: Deploy API
-        run: railway up --service 896433a2-649c-4d47-b397-1c2e4918b4fe --ci -- --dockerfile .railway/Dockerfile.api
+        working-directory: .railway/api
+        run: railway up --service 896433a2-649c-4d47-b397-1c2e4918b4fe --ci
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
 
@@ -48,9 +51,12 @@ jobs:
     needs: verify
     steps:
       - uses: actions/checkout@v4
+
       - name: Install Railway CLI
         run: npm install -g @railway/cli
+
       - name: Deploy Web
-        run: railway up --service 651af99c-48dd-4d98-85f4-a0bc78710924 --ci -- --dockerfile .railway/Dockerfile.web
+        working-directory: .railway/web
+        run: railway up --service 651af99c-48dd-4d98-85f4-a0bc78710924 --ci
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
