--- a/.railway/web/Dockerfile
+++ b/.railway/web/Dockerfile
@@ -2,25 +2,25 @@
 FROM node:20-alpine AS build
 WORKDIR /app
 
-# Install dependencies using root lockfile (workspace-aware)
-COPY package.json package-lock.json ./
-COPY apps/web/package.json apps/web/package.json
+# Install dependencies
+COPY ../../package.json ../../package-lock.json ./
+COPY ../../apps/web/package.json ./package.json
 RUN npm ci --include=dev
 
-# Copy the whole repo
-COPY . .
+# Copy repo
+COPY ../../ ./
 
 # Make sure public exists
 RUN mkdir -p apps/web/public
 
-# Build ONLY web workspace
+# Build only web
 RUN npm --workspace apps/web run build
 
 # ---------- Runtime ----------
 FROM node:20-alpine AS runtime
 WORKDIR /app
 
-# Copy only what's needed
+# Copy build artifacts
 COPY --from=build /app/apps/web/.next ./.next
 COPY --from=build /app/apps/web/public ./public
 COPY --from=build /app/apps/web/package*.json ./
@@ -29,5 +29,4 @@ COPY --from=build /app/node_modules ./node_modules
 ENV NODE_ENV=production
 EXPOSE 3000
 
-# Start Next.js
 CMD ["npm", "run", "start", "--workspace=apps/web"]
