--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Nx CI + CD
+name: Nx CI + CD (Final)
 
 on:
   push:
@@ -29,34 +29,25 @@ jobs:
       - name: Nx Affected - Build
         run: npx nx affected --target=build --parallel=3
 
-  deploy-api:
-    name: Deploy API to Railway
+  deploy:
+    name: Deploy API + Web in Parallel
     runs-on: ubuntu-latest
     needs: verify
+    strategy:
+      matrix:
+        service: [api, web]
     steps:
       - uses: actions/checkout@v4
 
       - name: Install Railway CLI
         run: npm install -g @railway/cli
 
-      - name: Deploy API
-        working-directory: .railway/api
-        run: railway up --service 896433a2-649c-4d47-b397-1c2e4918b4fe --ci
-        env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-
-  deploy-web:
-    name: Deploy Web to Railway
-    runs-on: ubuntu-latest
-    needs: verify
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Railway CLI
-        run: npm install -g @railway/cli
-
-      - name: Deploy Web
-        working-directory: .railway/web
-        run: railway up --service 651af99c-48dd-4d98-85f4-a0bc78710924 --ci
+      - name: Deploy
+        run: |
+          if [ "${{ matrix.service }}" == "api" ]; then
+            railway up --service 896433a2-649c-4d47-b397-1c2e4918b4fe --ci -- --dockerfile .railway/Dockerfile.api
+          else
+            railway up --service 651af99c-48dd-4d98-85f4-a0bc78710924 --ci -- --dockerfile .railway/Dockerfile.web
+          fi
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
