--- a/.railway/docker.api/Dockerfile
+++ b/.railway/docker.api/Dockerfile
@@ -1,38 +1,29 @@
-# ---------- Build ----------
+# Build stage
 FROM node:20-alpine AS build
-RUN apk add --no-cache libc6-compat openssl
 WORKDIR /app
 
-# Copy root manifests (from root of repo)
+# Copy root manifests
 COPY ../../package.json ../../package-lock.json ./
 
-# Copy API manifest
-COPY package.json ./
+# Copy API workspace manifest
+COPY ../../apps/api/package.json ./package.json
 
-# Install dependencies (workspace aware)
+# Install dependencies
 RUN npm ci --include=dev
 
 # Copy full repo for build
 COPY ../../ ./
 
-# Generate Prisma client
+# Prisma generate + build
 RUN npx prisma generate --schema apps/api/prisma/schema.prisma
-
-# Build API
 RUN npm --workspace apps/api run build
 
-# ---------- Runtime ----------
+# Runtime stage
 FROM node:20-alpine
-RUN apk add --no-cache libc6-compat openssl
 WORKDIR /app/apps/api
 
-# Copy API package.json
 COPY --from=build /app/apps/api/package*.json ./
-
-# Copy node_modules from build
-COPY --from=build /app/node_modules /app/node_modules
-
-# Copy dist + prisma
+COPY --from=build /app/node_modules ./node_modules
 COPY --from=build /app/apps/api/dist ./dist
 COPY --from=build /app/apps/api/prisma ./prisma
 
