--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,49 +5,37 @@ on:
     branches:
       - main
 
-concurrency:
-  group: deploy-${{ github.ref }}
-  cancel-in-progress: false
-
 jobs:
   verify:
-    name: Lint • Test • Build (affected only)
+    name: Lint • Test • Build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
-
       - name: Install dependencies
         run: npm install
-
       - name: Nx Affected - Lint
         run: npx nx affected --target=lint --parallel=3
-
       - name: Nx Affected - Test
         run: npx nx affected --target=test --parallel=3
-
       - name: Nx Affected - Build
         run: npx nx affected --target=build --parallel=3
 
   deploy:
-    name: Deploy API + Web Sequentially
+    name: Deploy API + Web
     runs-on: ubuntu-latest
     needs: verify
-    timeout-minutes: 30
     strategy:
       matrix:
         service: [api, web]
-      max-parallel: 1   # Sequential deploy for stability
+      max-parallel: 1
     steps:
       - uses: actions/checkout@v4
-
       - name: Install Railway CLI
         run: npm install -g @railway/cli
-
       - name: Deploy via Dockerfile
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
