--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install Railway CLI
         run: npm install -g @railway/cli
-      - name: Deploy via Dockerfile
+      - name: Deploy via Railway
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
         run: |
@@ -44,15 +44,16 @@ jobs:
           retries=3
           if [ "${{ matrix.service }}" == "api" ]; then
             SERVICE_ID=896433a2-649c-4d47-b397-1c2e4918b4fe
-            DOCKER_FOLDER=.railway/docker.api
+            DOCKERFILE=.railway/dockerfile.api
           else
             SERVICE_ID=651af99c-48dd-4d98-85f4-a0bc78710924
-            DOCKER_FOLDER=.railway/docker.web
+            DOCKERFILE=.railway/dockerfile.web
           fi
 
           until [ $retries -le 0 ]; do
             echo "Deploying ${{ matrix.service }}..."
-            railway up --ci --service $SERVICE_ID $DOCKER_FOLDER && break
+            # 👇 root (.) context + explicit Dockerfile
+            railway up --ci --service $SERVICE_ID --dockerfile $DOCKERFILE . && break
             retries=$((retries-1))
             echo "Retrying deploy for ${{ matrix.service }}... ($retries left)"
             sleep 10
