--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -1,38 +1,36 @@
-# apps/api/Dockerfile
-
 # ---------- Build ----------
 FROM node:20-alpine AS build
 RUN apk add --no-cache libc6-compat openssl
 WORKDIR /app
 
-# Copy root manifests + api manifest
-# (context = apps/api, so package.json here is already API ka package.json)
-# 👈 root ke manifests ke liye
-COPY ../../package.json ../../package-lock.json ./ 
- # 👈 api ka apna manifest  
-COPY package.json ./                                
+# Copy root manifests (root pe context hai)
+COPY package.json package-lock.json ./
 
-# Install all workspaces (dev deps included for build)
+# Copy API workspace manifest
+COPY apps/api/package.json apps/api/package.json
+
+# Install all workspaces
 RUN npm ci --include=dev
 
-# Copy repo
-COPY ../../ ./
+# Copy full repo
+COPY . .
 
 # Generate prisma client
 RUN npx prisma generate --schema apps/api/prisma/schema.prisma
 
-# Build API
-RUN npm --workspace apps/api run build
+# Build API only
+RUN npm run --workspace apps/api build
+
 
 # ---------- Runtime ----------
 FROM node:20-alpine
 RUN apk add --no-cache libc6-compat openssl
 WORKDIR /app/apps/api
 
-# Copy API package.json only
+# Copy API manifest
 COPY --from=build /app/apps/api/package*.json ./
 
-# Copy node_modules
+# Copy node_modules (workspace-aware)
 COPY --from=build /app/node_modules /app/node_modules
 
 # Copy dist + prisma
@@ -43,4 +41,4 @@ ENV NODE_ENV=production
 ENV PORT=4000
 EXPOSE 4000
 
-CMD ["npm", "start"]
+CMD ["node", "dist/main.js"]
