--- a/.railway/config.web.json
+++ b/.railway/config.web.json
@@ -1,6 +1,8 @@
 {
   "build": {
-    "dockerfile": "Dockerfile.web",
-    "context": "."
+    "dockerfilePath": "./Dockerfile.web"
+  },
+  "start": {
+    "cmd": "npm run start"
   }
 }
