--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,17 +42,17 @@ jobs:
         run: |
           set -e
           retries=3
+          SERVICE_ID=""
+          DOCKERFILE="Dockerfile"
+
           if [ "${{ matrix.service }}" == "api" ]; then
             SERVICE_ID=896433a2-649c-4d47-b397-1c2e4918b4fe
-            DOCKERFILE=.railway/dockerfile.api
           else
             SERVICE_ID=651af99c-48dd-4d98-85f4-a0bc78710924
-            DOCKERFILE=.railway/dockerfile.web
           fi
 
           until [ $retries -le 0 ]; do
             echo "Deploying ${{ matrix.service }}..."
-            # 👇 root (.) context + explicit Dockerfile
             railway up --ci --service $SERVICE_ID --dockerfile $DOCKERFILE . && break
             retries=$((retries-1))
             echo "Retrying deploy for ${{ matrix.service }}... ($retries left)"
